Bug 53881 - Acer 4736Z also needs brightness inverted
Summary: Acer 4736Z also needs brightness inverted
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Video(DRI - Intel) (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: intel-gfx-bugs@lists.freedesktop.org
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-14 16:23 UTC by Jani Monoses
Modified: 2013-03-04 21:22 UTC (History)
3 users (show)

See Also:
Kernel Version:
Subsystem:
Regression: No
Bisected commit-id:


Attachments
add another Acer to the quirk list (977 bytes, patch)
2013-02-14 18:05 UTC, Daniel Vetter
Details | Diff
patch (936 bytes, patch)
2013-02-15 14:51 UTC, Jani Monoses
Details | Diff

Description Jani Monoses 2013-02-14 16:23:53 UTC
I just discovered the invert_brightness command line fix today after over a year of having this bug showing up from time to time :)

This turns the backlight on after booting
sudo setpci -s 00:02.0 F4.B=00

but if using the kernel parameter there is no need for setpci.


Model name: Acer Aspire 4736Z

lspci entries for the two graphics slots, only SDevice is different from the Aspire 5734Z

Slot:	00:02.0
Class:	0300
Vendor:	8086
Device:	2a42
SVendor:	1025
SDevice:	0260
Rev:	07

Slot:	00:02.1
Class:	0380
Vendor:	8086
Device:	2a43
SVendor:	1025
SDevice:	0260
Rev:	07

I did not have the possibility to build and test a new kernel or I would have sent a patch.
Comment 1 Daniel Vetter 2013-02-14 18:05:30 UTC
Created attachment 93361 [details]
add another Acer to the quirk list

Please test whether this quirk entry works for you without setting the option manually, thanks.
Comment 2 Jani Monoses 2013-02-15 14:51:36 UTC
Created attachment 93391 [details]
patch

I tested this patch and backlight works without having to modify the kernel command line.
Comment 3 Daniel Vetter 2013-02-15 17:34:53 UTC
Patch should land in 3.9 soon and then get backported:

commit 0e4cc35b5bb871077ad7d8088792a4a0da02c18c
Author: Daniel Vetter <daniel.vetter@ffwll.ch>
Date:   Fri Feb 15 18:35:30 2013 +0100

    drm/i915: inverted brightness quirk for Acer Aspire 4736Z
Comment 4 Florian Mickler 2013-03-04 21:22:49 UTC
A patch referencing this bug report has been merged in Linux v3.9-rc1:

commit ac4199e0f047546aa40172785e26c82b54bbe811
Author: Daniel Vetter <daniel.vetter@ffwll.ch>
Date:   Fri Feb 15 18:35:30 2013 +0100

    drm/i915: inverted brightness quirk for Acer Aspire 4736Z

Note You need to log in before you can comment on or make changes to this bug.