drivers/gpu/drm/i915/intel_display.c
@@ -6925,6 +6925,9 @@ static struct intel_quirk intel_quirks[] = {
 
 	/* Lenovo ThinkCentre S510 may hang after idle for a long time */
 	{ 0x0102, 0x17aa, 0x307b, quirk_rc6_force_disable },
+
+	/* Acer Aspire 4736Z */
+	{ 0x2a42, 0x1025, 0x0260, quirk_invert_brightness },
 };
 
 static void intel_init_quirks(struct drm_device *dev)
